--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name:  Each.async
 author:  arieh
-current:  1.0b
+current:  1.0
 category: Native  
 tags:  [each,Array.each,Object.each,async]
 demo: http://jsfiddle.net/ariehg/xyFqW/
